Bug #17380 Missing charset causes NDB Client to crash
Submitted: 14 Feb 2006 16:20 Modified: 27 Mar 2006 14:51
Reporter: Geert Vanderkelen
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version: OS:
Assigned to: Pekka Nousiainen Target Version:

[14 Feb 2006 16:20] Geert Vanderkelen
Description:
An eror is not correctly handled when using a character set which does not exists or is
not loaded. The error code is not honnored and causes a crash.

How to repeat:
How to repeat provided privately.
[27 Mar 2006 13:20] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/4188
[27 Mar 2006 13:41] Pekka Nousiainen
return error (instead of coredump) when parse of table info
in client fails (due to for example missing charset).
fixed in 5.0.20
fixed earlier in 5.1
[27 Mar 2006 14:51] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented bugfix in 5.0.20 changelog. Closed.