ndb - bug#17380: Missing charset causes NDB Client to crash

ndb/src/ndbapi/NdbDictionaryImpl.cpp:
  check parseTableInfo return value to avoid coredump
  seen on solaris when charsets missing on client host